--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\Implementation\FilesApi.cs" />
     <Compile Include="Api\IDatabaseApi.cs" />
     <Compile Include="Api\IEmailApi.cs" />
     <Compile Include="Api\IServiceApi.cs" />
@@ -71,16 +72,19 @@
     <Compile Include="Api\IUserSessionApi.cs" />
     <Compile Include="Api\IFilesApi.cs" />
     <Compile Include="Api\IUserApi.cs" />
+    <Compile Include="Api\Implementation\UserSessionApi.cs" />
     <Compile Include="DreamFactoryException.cs" />
     <Compile Include="Http\HttpAddress.cs" />
     <Compile Include="Http\HttpHeaders.cs" />
     <Compile Include="Http\HttpMethod.cs" />
-    <Compile Include="Http\HttpRequest.cs" />
     <Compile Include="Http\HttpResponse.cs" />
     <Compile Include="Http\HttpUtils.cs" />
+    <Compile Include="Http\HttpRequest.cs" />
+    <Compile Include="Serialization\IObjectSerializer.cs" />
     <Compile Include="Http\IHttpFacade.cs" />
     <Compile Include="Http\IHttpRequest.cs" />
     <Compile Include="Http\IHttpResponse.cs" />
+    <Compile Include="Serialization\JsonObjectSerializer.cs" />
     <Compile Include="Http\UnirestHttpFacade.cs" />
     <Compile Include="Model\FileResponse.cs" />
     <Compile Include="Model\Login.cs" />
@@ -89,12 +93,10 @@
     <Compile Include="Model\SessionApp.cs" />
     <Compile Include="Rest\IRestContext.cs" />
     <Compile Include="Model\Error.cs" />
-    <Compile Include="Model\IModel.cs" />
     <Compile Include="Model\Logout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rest\RestApiVersion.cs" />
-    <Compile Include="Serialization\IObjectSerializer.cs" />
-    <Compile Include="Serialization\JsonObjectSerializer.cs" />
+    <Compile Include="Rest\RestContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
