Added discovery API and description

--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -64,6 +64,7 @@
     <Compile Include="HttpDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DiscoveryDemo.cs" />
     <Compile Include="UserSessionDemo.cs" />
   </ItemGroup>
   <ItemGroup>
