--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Http\HttpResponse.cs" />
     <Compile Include="Http\HttpUtils.cs" />
     <Compile Include="Http\HttpRequest.cs" />
+    <Compile Include="Model\Services.cs" />
     <Compile Include="Serialization\IObjectSerializer.cs" />
     <Compile Include="Http\IHttpFacade.cs" />
     <Compile Include="Http\IHttpRequest.cs" />
