--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -77,8 +77,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="RestContextTests.cs" />
+    <Compile Include="Http\HttpAddressTests.cs" />
+    <Compile Include="Rest\RestContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\JsonContentSerializerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DreamFactory\DreamFactory.csproj">
