Added sendEmail() call

--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseDemo.cs" />
+    <Compile Include="EmailDemo.cs" />
     <Compile Include="FilesDemo.cs" />
     <Compile Include="HttpDemo.cs" />
     <Compile Include="Program.cs" />
