--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -77,6 +77,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Api\EmailApiTests.cs" />
     <Compile Include="Api\FilesApiTests.cs" />
     <Compile Include="Api\UserSessionApiTests.cs" />
     <Compile Include="Http\HttpAddressTests.cs" />
@@ -95,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TestData\rest\email\post.request.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestData\rest\email\post.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TestData\rest\files\applications\calendar\test.txt\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
