--- a/DreamFactory.Demo/DreamFactory.Demo.csproj
+++ b/DreamFactory.Demo/DreamFactory.Demo.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DiscoveryDemo.cs" />
-    <Compile Include="UserSessionDemo.cs" />
+    <Compile Include="UserDemo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
