getDevice and setDevice API calls

--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -72,18 +72,20 @@
     <Compile Include="Api\Implementation\UserApi.cs" />
     <Compile Include="Api\Implementation\SystemApi.cs" />
     <Compile Include="Http\IHttpAddress.cs" />
-    <Compile Include="Model\EmailAddress.cs" />
-    <Compile Include="Model\EmailRequest.cs" />
-    <Compile Include="Model\FieldSchema.cs" />
+    <Compile Include="Model\User\DeviceRequest.cs" />
+    <Compile Include="Model\User\DeviceResponse.cs" />
+    <Compile Include="Model\Email\EmailAddress.cs" />
+    <Compile Include="Model\Email\EmailRequest.cs" />
+    <Compile Include="Model\Database\FieldSchema.cs" />
     <Compile Include="Model\Helper\ITableSchemaBuilder.cs" />
     <Compile Include="Model\Helper\TableSchemaBuilder.cs" />
-    <Compile Include="Model\PasswordRequest.cs" />
-    <Compile Include="Model\PasswordResponse.cs" />
-    <Compile Include="Model\ProfileRequest.cs" />
-    <Compile Include="Model\ProfileResponse.cs" />
-    <Compile Include="Model\Register.cs" />
-    <Compile Include="Model\RelatedSchema.cs" />
-    <Compile Include="Model\TableSchema.cs" />
+    <Compile Include="Model\User\PasswordRequest.cs" />
+    <Compile Include="Model\User\PasswordResponse.cs" />
+    <Compile Include="Model\User\ProfileRequest.cs" />
+    <Compile Include="Model\User\ProfileResponse.cs" />
+    <Compile Include="Model\User\Register.cs" />
+    <Compile Include="Model\Database\RelatedSchema.cs" />
+    <Compile Include="Model\Database\TableSchema.cs" />
     <Compile Include="Rest\IServiceFactory.cs" />
     <Compile Include="Api\ISystemApi.cs" />
     <Compile Include="Api\IFilesApi.cs" />
@@ -104,11 +106,11 @@
     <Compile Include="Http\IHttpResponse.cs" />
     <Compile Include="Serialization\JsonContentSerializer.cs" />
     <Compile Include="Http\UnirestHttpFacade.cs" />
-    <Compile Include="Model\FileResponse.cs" />
-    <Compile Include="Model\Login.cs" />
+    <Compile Include="Model\File\FileResponse.cs" />
+    <Compile Include="Model\User\Login.cs" />
     <Compile Include="Model\Resource.cs" />
-    <Compile Include="Model\Session.cs" />
-    <Compile Include="Model\SessionApp.cs" />
+    <Compile Include="Model\User\Session.cs" />
+    <Compile Include="Model\User\SessionApp.cs" />
     <Compile Include="Rest\IRestContext.cs" />
     <Compile Include="Model\Error.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
