--- a/DreamFactory.Tests/DreamFactory.Tests.csproj
+++ b/DreamFactory.Tests/DreamFactory.Tests.csproj
@@ -127,10 +127,10 @@
     <None Include="TestData\rest\user\custom\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\user\custom\setting1\delete.json">
+    <None Include="TestData\rest\user\custom\preferences\delete.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="TestData\rest\user\custom\setting1\get.json">
+    <None Include="TestData\rest\user\custom\preferences\get.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestData\rest\user\device\post.request.json">
