--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Api\Implementation\UserApi.cs" />
     <Compile Include="Api\Implementation\SystemApi.cs" />
     <Compile Include="Http\IHttpAddress.cs" />
+    <Compile Include="Model\Database\TableInfo.cs" />
     <Compile Include="Model\File\ContainerInfo.cs" />
     <Compile Include="Model\File\ContainerRequest.cs" />
     <Compile Include="Model\File\ContainerResponse.cs" />
