--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -78,9 +78,12 @@
     <Compile Include="Api\Implementation\UserApi.cs" />
     <Compile Include="Api\Implementation\SystemApi.cs" />
     <Compile Include="Http\IHttpAddress.cs" />
+    <Compile Include="Model\Builder\IStoreProcParamsBuilder.cs" />
+    <Compile Include="Model\Builder\StoreProcParamsBuilder.cs" />
     <Compile Include="Model\Database\StoredProcParam.cs" />
     <Compile Include="Model\Database\StoredProcRequest.cs" />
     <Compile Include="Model\Database\TableInfo.cs" />
+    <Compile Include="Model\Database\TypeMap.cs" />
     <Compile Include="Model\File\ContainerInfo.cs" />
     <Compile Include="Model\File\ContainerRequest.cs" />
     <Compile Include="Model\File\ContainerResponse.cs" />
@@ -88,15 +91,15 @@
     <Compile Include="Model\File\FolderRequest.cs" />
     <Compile Include="Model\File\FolderResponse.cs" />
     <Compile Include="Model\File\ListingFlags.cs" />
-    <Compile Include="Model\Helper\EmailRequestBuilder.cs" />
-    <Compile Include="Model\Helper\IEmailRequestBuilder.cs" />
+    <Compile Include="Model\Builder\EmailRequestBuilder.cs" />
+    <Compile Include="Model\Builder\IEmailRequestBuilder.cs" />
     <Compile Include="Model\User\DeviceRequest.cs" />
     <Compile Include="Model\User\DeviceResponse.cs" />
     <Compile Include="Model\Email\EmailAddress.cs" />
     <Compile Include="Model\Email\EmailRequest.cs" />
     <Compile Include="Model\Database\FieldSchema.cs" />
-    <Compile Include="Model\Helper\ITableSchemaBuilder.cs" />
-    <Compile Include="Model\Helper\TableSchemaBuilder.cs" />
+    <Compile Include="Model\Builder\ITableSchemaBuilder.cs" />
+    <Compile Include="Model\Builder\TableSchemaBuilder.cs" />
     <Compile Include="Model\User\Login.cs" />
     <Compile Include="Model\User\PasswordRequest.cs" />
     <Compile Include="Model\User\PasswordResponse.cs" />
