--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Http\IHttpAddress.cs" />
     <Compile Include="Model\Builder\IStoreProcParamsBuilder.cs" />
     <Compile Include="Model\Builder\StoreProcParamsBuilder.cs" />
+    <Compile Include="Model\Database\SqlQuery.cs" />
     <Compile Include="Model\Database\StoredProcParam.cs" />
     <Compile Include="Model\Database\StoredProcRequest.cs" />
     <Compile Include="Model\Database\TableInfo.cs" />
