--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Model\File\ListingFlags.cs" />
     <Compile Include="Model\Builder\EmailRequestBuilder.cs" />
     <Compile Include="Model\Builder\IEmailRequestBuilder.cs" />
+    <Compile Include="Model\System\AppRequest.cs" />
     <Compile Include="Model\System\AppResponse.cs" />
     <Compile Include="Model\System\RelatedAppGroup.cs" />
     <Compile Include="Model\System\RelatedRole.cs" />
